--- a/app/src/main/res/layout/activity_register_paso1.xml
+++ b/app/src/main/res/layout/activity_register_paso1.xml
@@ -2,6 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="#FFFFFF">
 
     <LinearLayout
@@ -14,27 +16,37 @@
         android:paddingBottom="16dp">
 
         <TextView
+            android:id="@+id/txtBienvenida"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
             android:text="Empecemos"
-            android:textColor="#000000"
+            android:fontFamily="@font/titulos"
             android:textSize="60sp"
-            android:textStyle="bold" />
+            android:layout_marginBottom="16dp"
+            android:textColor="@color/black"
+            tools:ignore="HardcodedText"/>
 
         <TextView
+            android:id="@+id/de_nuevo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="con tu registro"
-            android:textSize="33sp"
-            android:textColor="#000000"
-            android:layout_marginBottom="16dp" />
+            android:fontFamily="@font/titulos"
+            android:textSize="40sp"
+            android:layout_marginBottom="16dp"
+            android:textColor="@color/black"
+            tools:ignore="HardcodedText"
+            android:layout_marginStart="-35dp"
+            android:layout_marginTop="-65dp"/>
 
-        <ImageView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:layout_marginBottom="24dp"
-            android:scaleType="fitCenter" />
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/home_img"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="-30dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/register"
+            app:shapeAppearanceOverlay="@style/RoundedImageViewStyle" />
 
         <TextView
             android:layout_width="wrap_content"
