--- a/app/src/main/res/layout/activity_register_paso3.xml
+++ b/app/src/main/res/layout/activity_register_paso3.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFFFFF"
     android:padding="20dp">
 
@@ -29,10 +30,13 @@
             android:textSize="35sp"
             android:textStyle="bold" />
 
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="120dp"
-            android:layout_marginTop="10dp" />
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/home_img"
+            android:layout_width="300dp"
+            android:layout_height="150dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/add_pet"
+            app:shapeAppearanceOverlay="@style/RoundedImageViewStyle" />
 
         <TextView
             android:text="Cual es su nombre"
