--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,8 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:gravity="center"
     android:background="#FFFFFF"
@@ -13,19 +14,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Inicia sesión"
+        android:fontFamily="@font/titulos"
         android:textColor="#000000"
         android:textSize="60sp"
-        android:textStyle="bold"
         android:layout_gravity="center"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="-10dp"
+        tools:ignore="HardcodedText" />
 
     <!-- Imagen -->
-    <ImageView
-        android:id="@+id/ivProfile"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="24dp" />
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/home_img"
+        android:layout_width="250dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="-30dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/login_img"
+        app:shapeAppearanceOverlay="@style/RoundedImageViewStyle"
+        />
 
     <!-- Texto de "Cual es tu gmail" -->
     <TextView
@@ -33,9 +39,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cual es tu gmail"
+        android:layout_gravity="left"
         android:textColor="#000000"
-        android:textSize="30sp"
-        android:layout_marginBottom="4dp" />
+        android:textSize="25sp"
+        android:fontFamily="@font/titulos"
+        android:layout_marginBottom="4dp"
+        tools:ignore="HardcodedText" />
 
     <!-- Campo de correo -->
     <EditText
@@ -44,12 +53,14 @@
         android:layout_height="wrap_content"
         android:hint="ejemplo@gmail.com"
         android:drawableEnd="@drawable/ic_arrow_dropdown"
-        android:textColorHint="#00FFA3"
+        android:textColorHint="@color/grayHint"
+        android:fontFamily="@font/titulos"
         android:inputType="textEmailAddress"
         android:background="@drawable/rounded_edittext"
         android:padding="12dp"
         android:layout_marginBottom="16dp"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        tools:ignore="HardcodedText" />
 
     <!-- Texto de "Ingresa tu contraseña" -->
     <TextView
@@ -57,9 +68,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ingresa tu contraseña"
+        android:layout_gravity="left"
         android:textColor="#000000"
-        android:textSize="30sp"
-        android:layout_marginBottom="4dp" />
+        android:textSize="25sp"
+        android:fontFamily="@font/titulos"
+        android:layout_marginBottom="4dp"
+        tools:ignore="HardcodedText" />
 
     <!-- Campo de contraseña -->
     <EditText
@@ -68,36 +82,37 @@
         android:layout_height="wrap_content"
         android:hint="Escribe aqui tu contraseña"
         android:drawableEnd="@drawable/ic_arrow_dropdown"
-        android:textColorHint="#00FFA3"
+        android:textColorHint="@color/grayHint"
+        android:fontFamily="@font/titulos"
         android:inputType="textPassword"
         android:background="@drawable/rounded_edittext"
         android:padding="12dp"
-        android:layout_marginBottom="24dp"
-        android:textColor="#000000" />
+        android:layout_marginBottom="10dp"
+        android:textColor="#000000"
+        tools:ignore="HardcodedText" />
 
-    <!-- Botón Iniciar -->
+
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_height="80dp"
         android:text="Iniciar"
-        android:backgroundTint="#00FF9A"
-        android:padding="20dp"
-        android:textColor="#FFFFFF"
-        android:textSize="40sp"
-        android:layout_marginBottom="20dp"
-        android:textStyle="bold" />
+        android:fontFamily="@font/titulos"
+        android:textSize="30sp"
+        android:backgroundTint="@color/greenButton"
+        android:layout_marginTop="8dp"
+        tools:ignore="HardcodedText" />
 
-    <!-- Botón Volver -->
+
     <Button
         android:id="@+id/btnBack"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_height="80dp"
         android:text="Volver"
-        android:backgroundTint="#FF4C4C"
-        android:textSize="40sp"
-        android:padding="20dp"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold" />
+        android:fontFamily="@font/titulos"
+        android:textSize="30sp"
+        android:backgroundTint="@color/redButton"
+        android:layout_marginTop="5dp"
+        tools:ignore="HardcodedText" />
 </LinearLayout>
 
