--- a/app/src/main/res/layout/activity_register_paso2.xml
+++ b/app/src/main/res/layout/activity_register_paso2.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@android:color/white"
     android:padding="24dp"
@@ -10,21 +11,25 @@
     <!-- Título principal -->
     <TextView
         android:id="@+id/tvTitulo"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Continuemos"
+        android:fontFamily="@font/titulos"
         android:textColor="#000000"
-        android:textStyle="bold"
-        android:textSize="35sp"
+        android:textSize="50sp"
         android:layout_marginTop="24dp"
-        android:layout_marginBottom="24dp" />
-
+        android:layout_marginBottom="14dp"
+        tools:ignore="HardcodedText" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ingresa una contrasena"
-        android:textSize="27sp"
-        android:textColor="#000000" />
+        android:layout_gravity="left"
+        android:textColor="#000000"
+        android:textSize="25sp"
+        android:fontFamily="@font/titulos"
+        android:layout_marginBottom="4dp"
+        tools:ignore="HardcodedText"  />
 
     <EditText
         android:id="@+id/etPassword"
@@ -33,18 +38,23 @@
         android:background="@drawable/rounded_edittext"
         android:inputType="textPassword"
         android:hint="contraseña"
+        android:fontFamily="@font/titulos"
         android:drawableEnd="@drawable/ic_arrow_dropdown"
         android:paddingHorizontal="16dp"
         android:layout_marginBottom="16dp"
-        android:textColorHint="#00FFA3"
+        android:textColorHint="@color/grayHint"
         android:textColor="#000000" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Repite la contrasena"
-        android:textSize="27sp"
-        android:textColor="#000000" />
+        android:layout_gravity="left"
+        android:textColor="#000000"
+        android:textSize="25sp"
+        android:fontFamily="@font/titulos"
+        android:layout_marginBottom="4dp"
+        tools:ignore="HardcodedText"  />
 
     <!-- Input repetir contraseña -->
     <EditText
@@ -53,31 +63,34 @@
         android:layout_height="50dp"
         android:background="@drawable/rounded_edittext"
         android:inputType="textPassword"
-        android:hint="repetir contrasñea"
+        android:hint="contraseña"
+        android:fontFamily="@font/titulos"
         android:drawableEnd="@drawable/ic_arrow_dropdown"
         android:paddingHorizontal="16dp"
-        android:layout_marginBottom="32dp"
-        android:textColorHint="#00FFA3"
+        android:layout_marginBottom="16dp"
+        android:textColorHint="@color/grayHint"
         android:textColor="#000000" />
-
     <Button
         android:id="@+id/btnFinalizarRegistro"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_width="320dp"
+        android:layout_height="80dp"
         android:text="Registrarme"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        android:backgroundTint="#00FFA3"
-        android:layout_marginBottom="16dp" />
+        android:fontFamily="@font/titulos"
+        android:textSize="30sp"
+        android:backgroundTint="@color/greenButton"
+        android:layout_marginTop="20dp"
+        tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/btnVolver"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_width="320dp"
+        android:layout_height="80dp"
         android:text="Volver"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        android:backgroundTint="#FF6B6B" />
+        android:fontFamily="@font/titulos"
+        android:textSize="30sp"
+        android:backgroundTint="@color/redButton"
+        android:layout_marginTop="5dp"
+        tools:ignore="HardcodedText" />
 
 </LinearLayout>
 
