--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -2,139 +2,264 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Menú Principal"
-            android:textSize="35sp"
-            android:textColor="@android:color/black"
-            android:fontFamily="sans-serif-medium"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="32dp" />
+        <!-- Recuadro verde para agregar imagen - CENTRADO CORREGIDO -->
 
-        <Button
-            android:id="@+id/btnRegisterPet"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:text="Registrar una nueva mascota"
-            android:backgroundTint="@android:color/holo_green_dark"
-            android:textColor="@android:color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvTitle"
-            android:textSize="20sp"
-            android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="32dp" />
+        <!-- Botones amarillos -->
 
-        <Button
+        <FrameLayout
+            android:id="@+id/btnAddImage"
+            android:layout_width="match_parent"
+            android:layout_height="308dp"
+            android:layout_marginBottom="34dp"
+            android:background="#29F29B"
+            android:foreground="?attr/selectableItemBackground">
+
+            <!-- TextView centrado vertical y horizontalmente -->
+            <TextView
+                android:layout_width="234dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/titulos"
+                android:text="+ Agrega tu Imagen"
+                android:textColor="@android:color/black"
+                android:textSize="40sp"
+                tools:ignore="HardcodedText" />
+        </FrameLayout>
+
+        <RelativeLayout
             android:id="@+id/btnRealTimeLocation"
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:text="Monitoreo de la ubicación en tiempo real"
-            android:backgroundTint="@android:color/holo_green_dark"
-            android:textColor="@android:color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnRegisterPet"
-            android:textSize="20sp"
-            android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="32dp" />
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:background="@drawable/rounded_button_yellow"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="35dp"
+            android:clipToOutline="true">
 
-        <Button
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/titulos"
+                android:text="Ubicación en Tiempo real"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="24dp"
+                android:layout_toStartOf="@+id/iconLocation"
+                android:layout_marginEnd="16dp" />
+
+
+            <ImageView
+                android:id="@+id/iconLocation"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:src="@drawable/location"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="24dp"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
+
+        <RelativeLayout
             android:id="@+id/btnLocationHistory"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:text="Historial de ubicación"
-            android:backgroundTint="@android:color/holo_green_dark"
-            android:textColor="@android:color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnRealTimeLocation"
-            android:textSize="20sp"
-            android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="32dp" />
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:background="@drawable/rounded_button_yellow"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:clipToOutline="true">
 
-        <Button
-            android:id="@+id/btnRegisterSafeZone"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:text="Registrar zona segura"
-            android:backgroundTint="@android:color/holo_green_dark"
-            android:textColor="@android:color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnLocationHistory"
-            android:textSize="20sp"
-            android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="32dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/titulos"
+                android:text="Historial de Ubicación"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="24dp"
+                android:layout_toStartOf="@+id/iconLocation2"
+                android:layout_marginEnd="16dp"/>
 
-        <Button
-            android:id="@+id/btnActivityReport"
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:text="Reporte de actividad de la mascota"
-            android:backgroundTint="@android:color/holo_green_dark"
-            android:textColor="@android:color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnRegisterSafeZone"
-            android:textSize="20sp"
-            android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="32dp" />
+            <ImageView
+                android:id="@+id/iconLocation2"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:src="@drawable/location"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="24dp"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
 
-        <Button
+        <RelativeLayout
             android:id="@+id/btnNearbyClinics"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:text="Clínicas veterinarias cerca"
-            android:backgroundTint="@android:color/holo_green_dark"
-            android:textColor="@android:color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnActivityReport"
-            android:textSize="20sp"
-            android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="32dp" />
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:background="@drawable/rounded_button_yellow"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:clipToOutline="true">
 
-        <Button
-            android:id="@+id/btnRegisterVaccines"
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:text="Registrar vacunas de la mascota"
-            android:backgroundTint="@android:color/holo_green_dark"
-            android:textColor="@android:color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnNearbyClinics"
-            android:textSize="20sp"
-            android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="32dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/titulos"
+                android:text="Veterinarias Cercanas"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="24dp"
+                android:layout_toStartOf="@+id/iconLocation3"
+                android:layout_marginEnd="16dp"/>
 
-        <Button
+            <ImageView
+                android:id="@+id/iconLocation3"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:src="@drawable/location"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="24dp"
+                android:layout_centerVertical="true" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/btnActivityReport"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:background="@drawable/rounded_button_blue"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:clipToOutline="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/titulos"
+                android:text="Reporte de Actividad"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="24dp"
+                android:layout_toStartOf="@+id/iconrayo"/>
+
+            <ImageView
+                android:id="@+id/iconrayo"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:src="@drawable/rayo"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="24dp"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
+
+        <!-- Botones azules -->
+        <RelativeLayout
             android:id="@+id/btnExerciseMonitoring"
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:text="Monitoreo de ejercicio de la mascota"
-            android:backgroundTint="@android:color/holo_green_dark"
-            android:textColor="@android:color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnRegisterVaccines"
-            android:textSize="20sp"
-            android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="32dp"
-            android:layout_marginBottom="32dp" />
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:background="@drawable/rounded_button_blue"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:clipToOutline="true">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/titulos"
+                android:text="Monitoreo de Ejercicio"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="24dp"
+                android:layout_toStartOf="@+id/iconrayo2"
+                android:layout_marginEnd="16dp"/>
+
+            <ImageView
+                android:id="@+id/iconrayo2"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:src="@drawable/rayo"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="24dp"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/btnRegisterSafeZone"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:background="@drawable/rounded_button_gray"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:clipToOutline="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/titulos"
+                android:text="Registrar Zona Segura"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="24dp"
+                android:layout_toStartOf="@+id/iconcandado"
+                android:layout_marginEnd="16dp"/>
+
+            <ImageView
+                android:id="@+id/iconcandado"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:src="@drawable/candado"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="24dp"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/btnRegisterVaccines"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:background="@drawable/rounded_button_gray"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:clipToOutline="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/titulos"
+                android:text="Registrar Vacunas"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="24dp"
+                android:layout_toStartOf="@+id/iconjeringa"
+                android:layout_marginEnd="16dp"/>
+
+            <ImageView
+                android:id="@+id/iconjeringa"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:src="@drawable/jeringa"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="24dp"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
+    </LinearLayout>
 </ScrollView>
