--- a/app/src/main/res/layout/activity_veterinarios1.xml
+++ b/app/src/main/res/layout/activity_veterinarios1.xml
@@ -44,8 +44,8 @@
                 android:id="@+id/Veterinarios"
                 android:layout_width="350dp"
                 android:layout_height="500dp"
+                android:src="@drawable/perro"
                 android:scaleType="centerCrop"
-                android:src="@drawable/veterinarios"
                 android:layout_marginBottom="16dp"
                 android:layout_marginTop="-30dp" />
 
