--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -10,8 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
 
         <!-- Recuadro verde para agregar imagen - CENTRADO CORREGIDO -->
 
@@ -33,7 +32,8 @@
                 android:fontFamily="@font/titulos"
                 android:text="+ Agrega tu Imagen"
                 android:textColor="@android:color/black"
-                android:textSize="40sp"
+                android:textSize="30sp"
+                android:gravity="center"
                 tools:ignore="HardcodedText" />
         </FrameLayout>
 
