--- a/app/src/main/res/layout/activity_reporte_actividad.xml
+++ b/app/src/main/res/layout/activity_reporte_actividad.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:background="#F0F8FF">
+    android:background="#F0F8F">
 
     <LinearLayout
         android:layout_width="match_parent"
