Updating to search for nearby veterinaries

--- a/app/src/main/res/layout/activity_veterinarios.xml
+++ b/app/src/main/res/layout/activity_veterinarios.xml
@@ -35,9 +35,10 @@
             android:id="@+id/btnVolver"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Volver"
+            android:paddingHorizontal="10dp"
+            android:backgroundTint="#75DC5E"
             android:fontFamily="@font/titulos"
-            android:backgroundTint="#75DC5E" />
+            android:text="Volver" />
     </LinearLayout>
 
     <!-- Lista de veterinarios -->
